--- a/english/03_stock/2.html
+++ b/english/03_stock/2.html
@@ -54,8 +54,9 @@
                         <th scope="col" class="bdBottom">Account</th>
                         <th scope="col" class="gray">2014</th>
                         <th scope="col" class="gray">2015</th>
-                        <th scope="col" class="gray">2016<br/>                          (Consolidated)</th>
-						<th scope="col" class="gray">2017<br/>						  (Consolidated)</th>
+                        <th scope="col" class="gray">2016<br/>(Consolidated)</th>
+						<th scope="col" class="gray">2017<br/>(Consolidated)</th>
+                        <th scope="col" class="gray">2018<br/>(Consolidated)</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -65,6 +66,7 @@
                         <td class="center">204,381</td>
                         <td class="center">281,793</td>
 						<td class="center">395,946</td>
+                        <td class="center">462,405</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">Non-current Assets</th>
@@ -72,6 +74,7 @@
                         <td class="center">86,555</td>
                         <td class="center">95,139</td>
 						<td class="center">98,251</td>
+                        <td class="center">82,947</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">Total assets</th>
@@ -79,6 +82,7 @@
                         <td class="center blue bold">290,935</td>
                         <td class="center blue bold">376,933</td>
 						<td class="center blue bold">494,197</td>
+                        <td class="center blue bold">545,352</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">Current Liabilities</th>
@@ -86,6 +90,7 @@
                         <td class="center">166,098</td>
                         <td class="center">224,193</td>
 						<td class="center">312,903</td>
+                        <td class="center">337,815</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">Non-current Liabilities</th>
@@ -93,6 +98,7 @@
                         <td class="center">876</td>
                         <td class="center">990</td>
 						<td class="center">650</td>
+                        <td class="center">1,413</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">Total liabilities</th>
@@ -100,6 +106,7 @@
                         <td class="center blue bold">166,974</td>
                         <td class="center blue bold">225,184</td>
 						<td class="center blue bold">313,554</td>
+                        <td class="center blue bold">339,229</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">Capital</th>
@@ -107,6 +114,7 @@
                         <td class="center">5,000</td>
                         <td class="center">5,000</td>
 						<td class="center">5,000</td>
+                        <td class="center">5,000</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">Other paid-in capital</th>
@@ -114,6 +122,7 @@
                         <td class="center">5,113</td>
                         <td class="center">5,113</td>
 						<td class="center">177</td>
+                        <td class="center">-2,335</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">Other capital components</th>
@@ -121,6 +130,7 @@
                         <td class="center">-19</td>
                         <td class="center">37</td>
 						<td class="center">75</td>
+                        <td class="center">44</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">Retained earnings</th>
@@ -128,6 +138,7 @@
                         <td class="center">113,868</td>
                         <td class="center">141,599</td>
 						<td class="center">174,454</td>
+                        <td class="center">201,163</td>
                     </tr>
 					<tr>
                         <th scope="row" class="bdBottom">Minority Interests</th>
@@ -135,6 +146,7 @@
                         <td class="center">-</td>
                         <td class="center">-</td>
 						<td class="center">937</td>
+                        <td class="center">2,272</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">Total capital</th>
@@ -142,6 +154,7 @@
                         <td class="center blue bold">123,961</td>
                         <td class="center blue bold">151,749</td>
 						<td class="center blue bold">180,644</td>
+                        <td class="center blue bold">206,124</td>
                     </tr>
                 </tbody>
             </table>
@@ -158,8 +171,9 @@
                         <th scope="col" class="bdBottom">Account</th>
                         <th scope="col" class="gray">2014</th>
                         <th scope="col" class="gray">2015</th>
-                        <th scope="col" class="gray">2016<br/>                          (Consolidated)</th>
-						<th scope="col" class="gray">2017<br/>						  (Consolidated)</th>
+                        <th scope="col" class="gray">2016<br/>(Consolidated)</th>
+						<th scope="col" class="gray">2017<br/>(Consolidated)</th>
+                        <th scope="col" class="gray">2018<br/>(Consolidated)</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -169,6 +183,7 @@
 						<td class="center">263,883</td>
 						<td class="center">317,066</td>
 						<td class="center">366,437</td>
+                        <td class="center">414,998</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">Cost Of Sales</th>
@@ -176,6 +191,7 @@
 						<td class="center">181,424</td>
 						<td class="center">210,994</td>
 						<td class="center">249,994</td>
+                        <td class="center">300,810</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">Gross profit </th>
@@ -183,6 +199,7 @@
 						<td class="center">76,459</td>
 						<td class="center">106,072</td>
 						<td class="center">116,443</td>
+                        <td class="center">114,188</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">Operating Income</th>
@@ -190,6 +207,7 @@
                         <td class="center blue bold">34,161</td>
 						<td class="center blue bold">47,210</td>
 						<td class="center blue bold">43,124</td>
+                        <td class="center blue bold">35,280</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">Income tax expense </th>
@@ -197,6 +215,7 @@
 						<td class="center">8,652</td>
 						<td class="center">10,651</td>
 						<td class="center">12,165</td>
+                        <td class="center">8,557</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">Net Income</th>
@@ -204,6 +223,7 @@
                         <td class="center blue bold">30,525</td>
 						<td class="center blue bold">30,315</td>
 						<td class="center blue bold">36,577</td>
+                        <td class="center blue bold">30,047</td>
                     </tr>
                 </tbody>
             </table>
