--- a/korean/03_stock/2.html
+++ b/korean/03_stock/2.html
@@ -56,6 +56,7 @@
                         <th scope="col" class="gray">2015년</th>
                         <th scope="col" class="gray">2016년(연결)</th>
                         <th scope="col" class="gray">2017년(연결)</th>
+                        <th scope="col" class="gray">2018년(연결)</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -65,6 +66,7 @@
                         <td class="center">204,381</td>
                         <td class="center">281,793</td>
                         <td class="center">395,946</td>
+                        <td class="center">462,405</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">비유동자산</th>
@@ -72,6 +74,7 @@
                       <td class="center">86,555</td>
                         <td class="center">95,139</td>
                         <td class="center">98,251</td>
+                        <td class="center">82,947</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">자산총계</th>
@@ -79,6 +82,7 @@
                       <td class="center blue bold">290,935</td>
                         <td class="center blue bold">376,933</td>
                         <td class="center blue bold">494,197</td>
+                        <td class="center blue bold">545,352</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">유동부채</th>
@@ -86,6 +90,7 @@
                       <td class="center">166,098</td>
                         <td class="center">224,193</td>
                         <td class="center">312,903</td>
+                        <td class="center">337,815</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">비유동부채</th>
@@ -93,6 +98,7 @@
                       <td class="center">876</td>
                         <td class="center">990</td>
                         <td class="center">650</td>
+                        <td class="center">1,413</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">부채총계</th>
@@ -100,9 +106,11 @@
                       <td class="center blue bold">166,974</td>
                         <td class="center blue bold">225,184</td>
                         <td class="center blue bold">313,554</td>
+                        <td class="center blue bold">339,229</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">자본금</th>
+                        <td class="center">5,000</td>
                         <td class="center">5,000</td>
                         <td class="center">5,000</td>
                         <td class="center">5,000</td>
@@ -114,6 +122,7 @@
                         <td class="center">5,113</td>
                         <td class="center">5,113</td>
                         <td class="center">177</td>
+                        <td class="center">-2,335</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">기타자본구성요소</th>
@@ -121,6 +130,7 @@
                         <td class="center">-19</td>
                         <td class="center">37</td>
                         <td class="center">75</td>
+                        <td class="center">44</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">이익잉여금</th>
@@ -128,6 +138,7 @@
                       <td class="center">113,868</td>
                         <td class="center">141,599</td>
                         <td class="center">174,454</td>
+                        <td class="center">201,163</td>
                     </tr>
 					<tr>
                         <th scope="row" class="bdBottom">비지배지분</th>
@@ -135,6 +146,7 @@
                         <td class="center">-</td>
                         <td class="center">-</td>
                         <td class="center">937</td>
+                        <td class="center">2,272</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">자본총계</th>
@@ -142,6 +154,7 @@
                       <td class="center blue bold">123,961</td>
                         <td class="center blue bold">151,749</td>
                         <td class="center blue bold">180,644</td>
+                        <td class="center blue bold">206,124</td>
                     </tr>
                 </tbody>
             </table>
@@ -157,6 +170,8 @@
                         <th scope="col" class="gray">2015년</th>
                         <th scope="col" class="gray">2016년(연결)</th>
                         <th scope="col" class="gray">2017년(연결)</th>
+                        <th scope="col" class="gray">2017년(연결)</th>
+                        <th scope="col" class="gray">2018년(연결)</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -166,6 +181,7 @@
                       <td class="center">263,883</td>
                         <td class="center">317,066</td>
                         <td class="center">366,437</td>
+                        <td class="center">414,998</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">매출원가</th>
@@ -173,6 +189,7 @@
                       <td class="center">181,424</td>
                         <td class="center">210,994</td>
                         <td class="center">249,994</td>
+                        <td class="center">300,810</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">매출총이익</th>
@@ -180,6 +197,7 @@
                       <td class="center">76,459</td>
                         <td class="center">106,072</td>
                         <td class="center">116,443</td>
+                        <td class="center">114,188</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">영업이익</th>
@@ -187,6 +205,7 @@
                       <td class="center blue bold">34,161</td>
                         <td class="center blue bold">47,210</td>
                         <td class="center blue bold">43,124 </td>
+                        <td class="center blue bold">35,280</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">법인세비용</th>
@@ -194,6 +213,7 @@
                       <td class="center">8,652</td>
                         <td class="center">10,651</td>
                         <td class="center">12,165</td>
+                        <td class="center">8,557</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">당기순이익</th>
@@ -201,6 +221,7 @@
                       <td class="center blue bold">30,525</td>
                         <td class="center blue bold">30,315</td>
                         <td class="center blue bold">36,577</td>
+                        <td class="center blue bold">30,047</td>
                     </tr>
                 </tbody>
             </table>
