--- a/korean/03_stock/2.html
+++ b/korean/03_stock/2.html
@@ -47,7 +47,7 @@
 			</h3>
             <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mt30">
                 <colgroup>
-                    <col width="25%" /><col width="25%" /><col width="25%" /><col width="25%" /><col width="25%" />
+                    <col width="20%" /><col width="*" />
                 </colgroup>                
                 <thead>
                 	<tr>
@@ -161,7 +161,7 @@
             <h3>요약 손익계산서 <p class="right">(단위 : 백만원)</p></h3>
             <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mt30">
                 <colgroup>
-                    <col width="25%" /><col width="25%" /><col width="25%" /><col width="25%" /><col width="25%" />
+                    <col width="20%" /><col width="*" />
                 </colgroup>                
                 <thead>
                 	<tr>
@@ -170,7 +170,6 @@
                         <th scope="col" class="gray">2015년</th>
                         <th scope="col" class="gray">2016년(연결)</th>
                         <th scope="col" class="gray">2017년(연결)</th>
-                        <th scope="col" class="gray">2017년(연결)</th>
                         <th scope="col" class="gray">2018년(연결)</th>
                     </tr>
                 </thead>
@@ -178,7 +177,7 @@
                     <tr>
                         <th scope="row" class="bdBottom">매출액</th>
                         <td class="center">225,517</td>
-                      <td class="center">263,883</td>
+                        <td class="center">263,883</td>
                         <td class="center">317,066</td>
                         <td class="center">366,437</td>
                         <td class="center">414,998</td>
@@ -194,7 +193,7 @@
                     <tr>
                         <th scope="row" class="bdBottom">매출총이익</th>
                         <td class="center">54,113</td>
-                      <td class="center">76,459</td>
+                        <td class="center">76,459</td>
                         <td class="center">106,072</td>
                         <td class="center">116,443</td>
                         <td class="center">114,188</td>
@@ -202,7 +201,7 @@
                     <tr>
                         <th scope="row" class="bdBottom blue">영업이익</th>
                         <td class="center blue bold">21,230</td>
-                      <td class="center blue bold">34,161</td>
+                        <td class="center blue bold">34,161</td>
                         <td class="center blue bold">47,210</td>
                         <td class="center blue bold">43,124 </td>
                         <td class="center blue bold">35,280</td>
@@ -210,7 +209,7 @@
                     <tr>
                         <th scope="row" class="bdBottom">법인세비용</th>
                         <td class="center">8,249</td>
-                      <td class="center">8,652</td>
+                        <td class="center">8,652</td>
                         <td class="center">10,651</td>
                         <td class="center">12,165</td>
                         <td class="center">8,557</td>
@@ -218,7 +217,7 @@
                     <tr>
                         <th scope="row" class="bdBottom blue">당기순이익</th>
                         <td class="center blue bold">29,975</td>
-                      <td class="center blue bold">30,525</td>
+                        <td class="center blue bold">30,525</td>
                         <td class="center blue bold">30,315</td>
                         <td class="center blue bold">36,577</td>
                         <td class="center blue bold">30,047</td>
