--- a/english/03_stock/2.html
+++ b/english/03_stock/2.html
@@ -47,7 +47,7 @@
 			<p class="aright mt10">(Unit : million KRW)</p>
             <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mt10">
                 <colgroup>
-                    <col width="25%" /><col width="" /><col width="" /><col width="" /><col width="" />
+                    <col width="25%" /><col width="*" />
                 </colgroup>                
                 <thead>
                 	<tr>
