--- a/korean/01_company/32.html
+++ b/korean/01_company/32.html
@@ -109,7 +109,7 @@
                     <p></p>
                     <dl>
                         <dt>리더십</dt>
-                        <dd>Vision Callenger : NICE 미래를 개척하는 지도자</dd>
+                        <dd>Vision Challenger : NICE 미래를 개척하는 지도자</dd>
                         <dd>Synergy Builder :  NICE 융합의 퍼실리테이터</dd>
                         <dd>Moral Standard : NICE가치, 원칙, 규율 주순의 모범</dd>
                     </dl>
