--- a/korean/06_recruit/11.html
+++ b/korean/06_recruit/11.html
@@ -70,7 +70,7 @@
                     <p></p>
                     <dl>
                         <dt>도전</dt>
-                        <dd>NICE人은 현실 안주에서 벗어나, 새로운 셰계와 게임을 질실 수 있어야 한다.</dd>
+                        <dd>NICE人은 현실 안주에서 벗어나, 새로운 셰계와 게임을 즐길 수 있어야 한다.</dd>
                         <dd>NICE人은 중장기 관점을 가지고, 크고, 위험하며, 대담한 목표(BHAGs : Big, Hairy, Audacious, Goals)에 도전하는 사람이어야 한다.</dd>
                         <dd>5%보다는 5배의 Stretching 목표를 세워 도전한다. 보다 큰 꿈을 상상하고 이에 도달하려 노력한다.</dd>
                         <dd>업무를 수행함에 있어, 관료주의적인 방식을 개선하기 위해 노력하고, 가치 향상을 위한 새로운 방법을 추구한다.</dd>
