--- a/korean/06_recruit/11.html
+++ b/korean/06_recruit/11.html
@@ -60,9 +60,9 @@
                     <p></p>
                     <dl>
                         <dt>열정</dt>
-                        <dd>NICE가 지향하는 인재는 “無에서 有를 창조하고, 불가능을 가능케 할 수 있는 열정을 가진 사람이다.</dd>
+                        <dd>NICE가 지향하는 인재는 "無에서 有를 창조하고, 불가능을 가능케 할 수 있는 열정을 가진 사람"이다.</dd>
                         <dd>NICE人은 자신의 일에 대해 열정을 불어넣을 수 있어야 하며, 다른 구성원들에게 열정을 전파시킬 수 있는 사람이어야 한다.</dd>
-                        <dd>NICE人은 아무리 사소한 일이라도 자기에게 주어진 일 을 수중히 여기며 사랑할 수 있는 사람이다.</dd>
+                        <dd>NICE人은 아무리 사소한 일이라도 자기에게 주어진 일을 소중히 여기며 사랑할 수 있는 사람이다.</dd>
                         <dd>현실에 안주하지 않으며, 항상 긍정적 변화를 열망하는 사람이다.</dd>
                     </dl>
                 </li>
@@ -70,7 +70,7 @@
                     <p></p>
                     <dl>
                         <dt>도전</dt>
-                        <dd>NICE人은 현실 안주에서 벗어나, 새로운 셰계와 게임을 즐길 수 있어야 한다.</dd>
+                        <dd>NICE人은 현실 안주에서 벗어나, 새로운 세계와 게임을 즐길 수 있어야 한다.</dd>
                         <dd>NICE人은 중장기 관점을 가지고, 크고, 위험하며, 대담한 목표(BHAGs : Big, Hairy, Audacious, Goals)에 도전하는 사람이어야 한다.</dd>
                         <dd>5%보다는 5배의 Stretching 목표를 세워 도전한다. 보다 큰 꿈을 상상하고 이에 도달하려 노력한다.</dd>
                         <dd>업무를 수행함에 있어, 관료주의적인 방식을 개선하기 위해 노력하고, 가치 향상을 위한 새로운 방법을 추구한다.</dd>
