--- a/korean/03_stock/2.html
+++ b/korean/03_stock/2.html
@@ -52,61 +52,61 @@
                 <thead>
                 	<tr>
                         <th scope="col" class="bdBottom">계정</th>
-                        <th scope="col" class="gray">2014년</th>
                         <th scope="col" class="gray">2015년</th>
                         <th scope="col" class="gray">2016년(연결)</th>
                         <th scope="col" class="gray">2017년(연결)</th>
                         <th scope="col" class="gray">2018년(연결)</th>
+                        <th scope="col" class="gray">2019년(연결)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <th scope="row" class="bdBottom">유동자산</th>
-                        <td class="center">199,724</td>
                         <td class="center">204,381</td>
                         <td class="center">281,793</td>
                         <td class="center">395,946</td>
                         <td class="center">462,405</td>
+                        <td class="center">554,769</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">비유동자산</th>
-                        <td class="center">46,364</td>
-                      <td class="center">86,555</td>
+                        <td class="center">86,555</td>
                         <td class="center">95,139</td>
                         <td class="center">98,251</td>
                         <td class="center">82,947</td>
+                        <td class="center">87,175</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">자산총계</th>
-                        <td class="center blue bold">246,088</td>
-                      <td class="center blue bold">290,935</td>
+                        <td class="center blue bold">290,935</td>
                         <td class="center blue bold">376,933</td>
                         <td class="center blue bold">494,197</td>
                         <td class="center blue bold">545,352</td>
+                        <td class="center blue bold">641,944</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">유동부채</th>
-                        <td class="center">148,413</td>
-                      <td class="center">166,098</td>
+                        <td class="center">166,098</td>
                         <td class="center">224,193</td>
                         <td class="center">312,903</td>
                         <td class="center">337,815</td>
+                        <td class="center">407,317</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">비유동부채</th>
-                        <td class="center">1,912</td>
-                      <td class="center">876</td>
+                        <td class="center">876</td>
                         <td class="center">990</td>
                         <td class="center">650</td>
                         <td class="center">1,413</td>
+                        <td class="center">3,534</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">부채총계</th>
-                        <td class="center blue bold">150,325</td>
-                      <td class="center blue bold">166,974</td>
+                        <td class="center blue bold">166,974</td>
                         <td class="center blue bold">225,184</td>
                         <td class="center blue bold">313,554</td>
                         <td class="center blue bold">339,229</td>
+                        <td class="center blue bold">410,851</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">자본금</th>
@@ -120,41 +120,41 @@
                         <th scope="row" class="bdBottom">기타불입자본</th>
                         <td class="center">5,113</td>
                         <td class="center">5,113</td>
-                        <td class="center">5,113</td>
                         <td class="center">177</td>
                         <td class="center">-2,335</td>
+                        <td class="center">-1,788</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">기타자본구성요소</th>
-                        <td class="center">-</td>
                         <td class="center">-19</td>
                         <td class="center">37</td>
                         <td class="center">75</td>
                         <td class="center">44</td>
+                        <td class="center">-131</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">이익잉여금</th>
-                        <td class="center">85,650</td>
-                      <td class="center">113,868</td>
+                        <td class="center">113,868</td>
                         <td class="center">141,599</td>
                         <td class="center">174,454</td>
                         <td class="center">201,163</td>
+                        <td class="center">226,970</td>
                     </tr>
 					<tr>
                         <th scope="row" class="bdBottom">비지배지분</th>
-                        <td class="center">95,763</td>
                         <td class="center">-</td>
                         <td class="center">-</td>
                         <td class="center">937</td>
                         <td class="center">2,272</td>
+                        <td class="center">1,043</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">자본총계</th>
-                       <td class="center blue bold">95,763</td>
-                      <td class="center blue bold">123,961</td>
+                        <td class="center blue bold">123,961</td>
                         <td class="center blue bold">151,749</td>
                         <td class="center blue bold">180,644</td>
                         <td class="center blue bold">206,124</td>
+                        <td class="center blue bold">231,093</td>
                     </tr>
                 </tbody>
             </table>
@@ -166,61 +166,61 @@
                 <thead>
                 	<tr>
                         <th scope="col" class="bdBottom">계정</th>
-                         <th scope="col" class="gray">2014년</th>
                         <th scope="col" class="gray">2015년</th>
                         <th scope="col" class="gray">2016년(연결)</th>
                         <th scope="col" class="gray">2017년(연결)</th>
                         <th scope="col" class="gray">2018년(연결)</th>
+                        <th scope="col" class="gray">2019년(연결)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <th scope="row" class="bdBottom">매출액</th>
-                        <td class="center">225,517</td>
                         <td class="center">263,883</td>
                         <td class="center">317,066</td>
                         <td class="center">366,437</td>
                         <td class="center">414,998</td>
+                        <td class="center">452,923</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">매출원가</th>
-                        <td class="center">171,403</td>
-                      <td class="center">181,424</td>
+                        <td class="center">181,424</td>
                         <td class="center">210,994</td>
                         <td class="center">249,994</td>
                         <td class="center">300,810</td>
+                        <td class="center">337,462</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">매출총이익</th>
-                        <td class="center">54,113</td>
                         <td class="center">76,459</td>
                         <td class="center">106,072</td>
                         <td class="center">116,443</td>
                         <td class="center">114,188</td>
+                        <td class="center">115,461</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">영업이익</th>
-                        <td class="center blue bold">21,230</td>
                         <td class="center blue bold">34,161</td>
                         <td class="center blue bold">47,210</td>
                         <td class="center blue bold">43,124 </td>
                         <td class="center blue bold">35,280</td>
+                        <td class="center blue bold">35,046</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom">법인세비용</th>
-                        <td class="center">8,249</td>
                         <td class="center">8,652</td>
                         <td class="center">10,651</td>
                         <td class="center">12,165</td>
                         <td class="center">8,557</td>
+                        <td class="center">7,679</td>
                     </tr>
                     <tr>
                         <th scope="row" class="bdBottom blue">당기순이익</th>
-                        <td class="center blue bold">29,975</td>
                         <td class="center blue bold">30,525</td>
                         <td class="center blue bold">30,315</td>
                         <td class="center blue bold">36,577</td>
                         <td class="center blue bold">30,047</td>
+                        <td class="center blue bold">29,475</td>
                     </tr>
                 </tbody>
             </table>
